# spin-sqlx

./: Cargo.toml  README.md
examples/: README.md  spin.toml
examples/execute-insert/: Cargo.toml
examples/execute-insert/src/: lib.rs
examples/fetch-many/: Cargo.toml
examples/fetch-many/src/: lib.rs
examples/fetch-one/: Cargo.toml
examples/fetch-one/src/: lib.rs
examples/fetch-streaming/: Cargo.toml
examples/fetch-streaming/src/: lib.rs
src/: convert.rs  lib.rs  query_result.rs
src/pg/: convert.rs  error.rs  mod.rs  query_result.rs  type_info.rs
src/sqlite/: convert.rs  error.rs  mod.rs  query_result.rs  type_info.rs
