[package]
name = "spin-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin-sdk = "2.2"
sqlx = "0.7.2"

anyhow = "1"
either = "1.6.1"
futures = { version = "0.3.19", default-features = false }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.19", default-features = false, features = ["alloc", "sink", "io"] }
url = "2.4.1"
log = { version = "0.4.14", default-features = false }
tracing = { version = "0.1", features = ["log"] }
