[package]
name = "fetch-streaming"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
futures = { version = "0.3.19", default-features = false }
spin-executor = "3.0"
spin-sdk = "3.0"
spin-sqlx = { path = "../.." }
sqlx = "0.8.0"

[workspace]
